kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s3-browser
  namespace: default
  labels:
    app: s3-browser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s3-browser
  template:
    metadata:
      labels:
        app: s3-browser
    spec:
      containers:
      - name: s3-browser
        image: s3-browser:latest # Replace with your image name and tag
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
