kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3-browser-service
  namespace: default
spec:
  selector:
    app: s3-browser
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
